# rusttorney

./: Cargo.toml  LICENSE.md  README.md  database.sql  rustfmt.toml
.github/workflows/: ci.yml
config/: config.toml
src/: config.rs  fantacrypt.rs  lib.rs  main.rs  master_server_client.rs  server.rs
src/networking/: mod.rs
