[package]
name = "rusttorney"
version = "0.1.0"
authors = ["Kirill Mironov | vetrokm@gmail.com", "Contributors"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
tokio = { version = "0.2.21", features = ["tcp", "macros"] }
serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5.6"