[package]
name = "rusttorney"
version = "0.1.0"
authors = ["Kirill Mironov | vetrokm@gmail.com", "Contributors"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["tcp", "macros", "dns", "io-util"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5.6"
anyhow = "1.0.31"
log = "0.4.8"
bytes = "0.5.6"
